{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 70,
  "lineage": "6b49f454-8ef8-4bdc-01f6-7bebe5939e21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad35bfbf3b072c48",
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:elastic-ip/eipalloc-0ad35bfbf3b072c48",
            "association_id": "eipassoc-048042c4ef915c042",
            "domain": "vpc",
            "id": "eipalloc-0ad35bfbf3b072c48",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ac33cf762c661035",
            "private_dns": "ip-10-0-4-243.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.243",
            "public_dns": "ec2-43-203-76-206.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.76.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-nat-eip-0",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-nat-eip-0",
              "Project": "msa-autoscaling"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:internet-gateway/igw-0b56d8606fb5193ba",
            "id": "igw-0b56d8606fb5193ba",
            "owner_id": "202035712420",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-igw",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-igw",
              "Project": "msa-autoscaling"
            },
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad35bfbf3b072c48",
            "association_id": "eipassoc-048042c4ef915c042",
            "connectivity_type": "public",
            "id": "nat-0e32fe49029b38d97",
            "network_interface_id": "eni-0ac33cf762c661035",
            "private_ip": "10.0.4.243",
            "public_ip": "43.203.76.206",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edd7239e0fddea67",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-nat-0",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-nat-0",
              "Project": "msa-autoscaling"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:route-table/rtb-02e16bd04d4a57e77",
            "id": "rtb-02e16bd04d4a57e77",
            "owner_id": "202035712420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e32fe49029b38d97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-rt-0",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-rt-0",
              "Project": "msa-autoscaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:route-table/rtb-04c4706d4185a67f4",
            "id": "rtb-04c4706d4185a67f4",
            "owner_id": "202035712420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b56d8606fb5193ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-rt",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-rt",
              "Project": "msa-autoscaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07058db6b46b79f9b",
            "route_table_id": "rtb-02e16bd04d4a57e77",
            "subnet_id": "subnet-018bb3e13ba7899c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a26f417021fb6d01",
            "route_table_id": "rtb-02e16bd04d4a57e77",
            "subnet_id": "subnet-0400d81a906f6df34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9be0b8ea0a82280",
            "route_table_id": "rtb-04c4706d4185a67f4",
            "subnet_id": "subnet-0edd7239e0fddea67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0288aad0ade5287e5",
            "route_table_id": "rtb-04c4706d4185a67f4",
            "subnet_id": "subnet-0bc3e401db428edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:subnet/subnet-018bb3e13ba7899c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018bb3e13ba7899c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202035712420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-ap-northeast-2a",
              "Project": "msa-autoscaling",
              "karpenter.sh/discovery": "msa-eks-cluster",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-ap-northeast-2a",
              "Project": "msa-autoscaling",
              "karpenter.sh/discovery": "msa-eks-cluster",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:subnet/subnet-0400d81a906f6df34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400d81a906f6df34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202035712420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-ap-northeast-2c",
              "Project": "msa-autoscaling",
              "karpenter.sh/discovery": "msa-eks-cluster",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-private-ap-northeast-2c",
              "Project": "msa-autoscaling",
              "karpenter.sh/discovery": "msa-eks-cluster",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:subnet/subnet-0edd7239e0fddea67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd7239e0fddea67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202035712420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-ap-northeast-2a",
              "Project": "msa-autoscaling",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-ap-northeast-2a",
              "Project": "msa-autoscaling",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:subnet/subnet-0bc3e401db428edca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc3e401db428edca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202035712420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-ap-northeast-2c",
              "Project": "msa-autoscaling",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-public-ap-northeast-2c",
              "Project": "msa-autoscaling",
              "kubernetes.io/cluster/msa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0922a3aa86c9c26f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:202035712420:vpc/vpc-0922a3aa86c9c26f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bd07fc958edeb30",
            "default_route_table_id": "rtb-0131e6810a310b540",
            "default_security_group_id": "sg-0231f74f8cb561712",
            "dhcp_options_id": "dopt-052cff23847d2191b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0922a3aa86c9c26f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0131e6810a310b540",
            "owner_id": "202035712420",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-vpc",
              "Project": "msa-autoscaling"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "msa-eks-cluster-vpc",
              "Project": "msa-autoscaling"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}